--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+ <link rel="stylesheet" href="styles/general.css">
 <h1>Hello World!</h1>
+
  
 <!--This is a different header tag: -->
 <h2>I said HELLO WORLD!</h2>
