--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
- <link rel="stylesheet" href="styles/general.css">
-<h1>Hello World!</h1>
 
+<h1>Hello World!</h1>
+  <link rel="stylesheet" href="styles/general.css">
+    <link rel="stylesheet" href="styles/header.css">
  
 <!--This is a different header tag: -->
 <h2>I said HELLO WORLD!</h2>
