--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
  
 <!--This is a link,property is hypertext reference: -->
 <a class = "link" href="www.google.com">Google</a>
- 
+
+  <p>Nike shoes</p>
+<a href="https://www.amazon.com/"target="_blank">Back to Amazon</a>
+<p>Nike Black running shoes<p>
+
+     <p> $39- in stock.</p>
+
+    </p>Free delivery tomorrow<p>
+
+   
+
+ <button>Add to Cart</button> <button>Buy Now</button>
 <!--Put elements inside each other:  -->
 <div>
   <p>This is a paragraph</p>
