--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
      <p> $39- in stock.</p>
 
     </p>Free delivery tomorrow<p>
-
+button{
+      background-color: yellow;
+      }
    
 
  <button>Add to Cart</button> <button>Buy Now</button>
