--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
    
 
- <button>Add to Cart</button> <button>Buy Now</button>
+ <button class = "add to cart-button" > Add to Cart</button> 
+      
+      <button>Buy Now</button>
 <!--Put elements inside each other:  -->
 <div>
   <p>This is a paragraph</p>
