--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     </p>Free delivery tomorrow<p>
 
-   
+   <link rel= "stylesheet" href="main.css"/>
 
  <button class = "add to cart-button"> Add to Cart</button> 
       
