--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
    <link rel= "stylesheet" href="styles/general.css"/>
 
- <button class = "add to cart-button"> Add to Cart</button> 
+ <button class = "add-button"> Add to Cart</button> 
       
       <button>Buy Now</button>
 <!--Put elements inside each other:  -->
