--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     </p>Free delivery tomorrow<p>
 
-   <link rel= "stylesheet" href="styles/general.css"/>
+ <link rel="stylesheet" href="styles/general.css">
 
  <button class = "add-button"> Add to Cart</button> 
       
