--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     </p>Free delivery tomorrow<p>
 
  <link rel="stylesheet" href="styles/general.css">
+      .add-button {
+       background-color: yellow;
+       height: 50px;
+       width: 105px;
+       border-radius: 2px;
+       cursor: pointer;
+       border: none;
+}
 
  <button class = "add-button"> Add to Cart</button> 
       
