--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     </p>Free delivery tomorrow<p>
 
- <link rel="stylesheet" href="styles/general.css">
-      .add-button {
+ 
+      button {
        background-color: yellow;
        height: 50px;
        width: 105px;
