--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        border: none;
 }
 
- <button class = "add-button"> Add to Cart</button> 
+ <button> Add to Cart</button> 
       
       <button>Buy Now</button>
 <!--Put elements inside each other:  -->
