--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
  
 <a href="https://www.amazon.com/"target="_blank">Back to Amazon</a>
-<p>Nike Black running shoes<p>
+<h2>Nike Black running shoes</h2>  
 
-     <p> $39- in stock.</p>
+     <h3> $39- in stock.</h3>
 
     </p>Free delivery tomorrow<p>
 
