--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Hello World!</h1>
   <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css">
- 
+ <body>
 <a href="https://www.amazon.com/"target="_blank">Back to Amazon</a>
 <h2>Nike Black running shoes</h2>  
 
@@ -18,5 +18,6 @@
  <button> Add to Cart</button> 
       
       <button>Buy Now</button>
+ </body>     
 
 </html>
