--- a/index.html
+++ b/index.html
@@ -10,18 +10,13 @@
 
      <h3> $39- in stock.</h3>
 
-    </p>Free delivery tomorrow<p>
+    <p>Free delivery tomorrow</p>
 
-       button {
-       background-color: yellow;
-       height: 38px;
-       width: 85px;
-       border-radius: 2px;
-       cursor: pointer;
-       border: none;
-       color: white;
-            
-}
+   <link rel="stylesheet" href="styles/general.css">
+   
+   
+
+  
       <button> Add to Cart</button> 
       
       <button>Buy Now</button>
