--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
     <p>Free delivery tomorrow</p>
 
-   <styles>
+   <style>
 
    <link rel="stylesheet" href="styles/general.css">
    
       <button> Add to Cart</button> 
       
       <button>Buy Now</button>
-    </styles> 
+    </style> 
  </body>     
 
 </html>
